pushed language and also first time entry into gps screen for prompt to run gps

--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -1,61 +1,45 @@
 {
-    "buddhistSun":              "බෞද්ධ හිරු!",
-    "noon":                     "දහවල්",
-    "dawn":                     "අලුයම",
-    "timer":                    "ටයිමර්",
-    "gps":                      "GPS",
-    "settings":                 "සැකසුම්",
-    "help":                     "උදව්",
-    "about":                    "ගැන",
-    "licenses":                 "බලපත්ර",
-    "not_set":                  "සකසා නැත",
-    "solar_noon":               "සූර්ය දවල්",
-    "gmt_offset":               "GMT ඕෆ්සෙට්",
-    "hours":                    "පැය",
-    "astronomical_twilight":    "තාරකා විද්‍යාත්මක ට්වි",
-    "nautical_twilight":        "නාවික සැඳෑව",
-    "civil_twilight":           "සිවිල් අන්ධකාරය",
-    "sunrise":                  "හිරු උදාව",
-    "date":                     "දිනය",
-    "current_time":             "දැන් වේලාව",
-    "late":                     "නැසීගිය",
-    "time_left":                "ඉතිරි කාලය",
-    "speech_notify":            "කථන දැනුම්දීම",
-    "screen_always_on":         "තිරය සැමවිටම ක්‍රියාත්මකයි",
-    "speech_in_background":     "පසුපසට කථා කරන්න",
-    "volume":                   "වෙළුම",
-    "press_wait":               "එෆ් ඔබා බලා සිටින්නw GPS.",
-    "get_gps":                  "ජීපීඑස් ලබා ගන්න",
-    "save_gps":                 "ජීපීඑස් සුරකින්න",
-    "set_gps_city":             "ජීපීඑස් නගර අංකය සකසන්නInternet",
-    "previous_gps_is":          "පෙර ජීපීඑස් වේ",
-    "decimal_number":           "දශම අංකය",
-    "current_offset_is":        "වර්තමාන ඕෆ්සෙට්",
-    "safety":                   "ආරක්ෂාව",
-    "none":                     "නැත",
-    "minute1":                  "1 විනාඩියක්",
-    "minutes2":                 "විනාඩි 2",
-    "minutes3":                 "විනාඩි 3",
-    "minutes4":                 "විනාඩි 4",
-    "minutes5":                 "විනාඩි 5",
-    "minutes10":                "විනාඩි 10",
-    "na_uyana":                 "නා-උයන",
-    "pa_auk":                   "පා-ඕක්",
-    "search_for_city":          "නගරය සොයන්න",
-    "gps_permission":                   "GPS Permission",
-    "background_permission":            "Background Permission",
-    "error":                            "Error",
-    "notification":                     "Notification",
-    "running_in_background":            "Buddhist Sun Running In Background",
-    "background_initialized":           "Background Initialized",
-    "background_enabled":               "Background Enabled",
-    "background_not_set":               "Background not set",
-    "background_init_error":            "Background initialize error",
-    "background_disabled":              "Background disabled",
-    "ok":                               "OK",
-    "gps_not_available":                "GPS is not available",
-    "help_content":                     "Calculations:\n The calculations are based on equations from Astronomical Algorithms, by Jean Meeus. The sunrise and sunset results are theoretically accurate to within a minute for locations between +/- 72° of latitud. Please consider stopping well before the stated time. \n\nNOON:\nThe Noon screen displays the Solar Noon for the current day as selected by GPS or City in an easy to view manner. All times reflect the safety from settings.  (see below) \n\nDAWN:\nThe Dawn screen displays the selected Dawn formula from the settings and also various solar calculations. All times reflect the safety from settings.  \nPa-Auk = ( Sunrise - 40 Minutes).  \nNa-uyana = ( Sunrise - 30 minutes)  (see below) \n\nGPS:\nGPS will automatically set the city if the Internet is on and the checkbox is checked.  It is recommended that you use the GPS settings for your location because the Solar Noon will be most accurate this way.  This was not tested with \"Day Light Savings\" locations.\n\nSETTINGS:\nOffset:\n This is automatically set when using GPS.  If you use City Search in settings, you must select an offset (GMT +- your local time). \nSaftey:\nThis subtracts minutes from the Noon time to make it earlier and adds to Dawnrise to make it later.  The formula is accurate within one minute so the default safety is 1 minute. \nDawn:\nChoose your prefered Dawnrise.  Na-Uyana uses Sunrise -30 minutes, and Pa-Auk uses Sunrise -40 minutes.  Safety will add x-Minutes to this time. \nTimer:\nThe Timer screen allows for hands free audio notifications.  Speech means \"Text to Speech\".  The volume is controlled by the slider.  Under normal conditions the speech notifications only work while the screen is on.  To fix this, you can make the screen stay awake with the \"Screen Always On\" switch, or you can enable the \"TTS with screen off\" feature.  This will enable \"background\" operation while your screen is off and prevent the device from entering sleep mode. You should test this background feature a few times before relying on it.  Some phones may not allow it. We are not responsible for anything.  When you close the applicaton, a method is called to stop the background task.  You will know the app is running in the background by the sun icon displayed in the top of your phone's notification area (where the time and signal bars are).  If Buddhist Sun is not in \"background mode\", you will not see a sun icon. This feature is not available for iOS users.\n The speech announcements are in the following minute intervals: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacy:\nA full privacy statement is located at:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information.",
-    "about_content":                    "Buddhist Sun is a small app for Buddhist monks and nuns to display the Solar Noon time specific to Buddhist monastic needs. Because I usually eat with my hands, I needed to have a \"hands free\" way to know when the Noon was approaching. The timer with voice notifications turned on helps me know the time left for eating.  I enjoy using the app, and I hope that you do too.\n\nWhy is this important?\nThose who follow Buddhist monastic rules are not allowed to eat after Noon.  The rule is according to the sun at its zenith in the sky rather than a clock. They did not have clocks in the Buddha's time.  Others who follow 8 or 10 precepts may find this app useful too.\n\nI recommend https://TimeandDate.com to verify this app's accuracy.This application is meant for \"present moment/location\" use.  \n\nMay this help you to reach Nibbāna quickly and safely!",
-    "gps_permission_content":           "Permission will be requested for GPS use. This allows for Buddhist Sun to know the GPS Location Data to calculate the sun's position. GPS is only collected once for each time the GPS button is pressed.  Data is not sent outside this app.",
-    "background_permission_content":    "Permission will be requested for background use.  This permission is needed to enable speech notifications to run properly the screen on.  Buddhist Sun will turn off this Background process when the switch is turned off or the app is closed.  Permission will be requested only one time if accepted."
+    "buddhistSun": "බෞද්ධ හිරු!",
+    "noon": "දහවල්",
+    "dawn": "අලුයම",
+    "timer": "කාල ගණකය",
+    "gps": "GPS",
+    "settings": "සැකසුම්",
+    "help": "උදව්",
+    "about": "පිළිබඳව",
+    "licenses": "බලපත්‍ර",
+    "not_set": "සකසා නැත",
+    "solar_noon": "දහවල් හිරු",
+    "gmt_offset": "GMT ඕෆ්සෙට්",
+    "hours": "පැය",
+    "astronomical_twilight": "තාරකා අඳුර",
+    "nautical_twilight": "නාවික සැඳෑව",
+    "civil_twilight": "සිවිල් අඳුර",
+    "sunrise": "හිරු උදාව",
+    "date": "දිනය",
+    "current_time": "දැන් වේලාව",
+    "late": "නැසීගිය",
+    "time_left": "ඉතිරි කාලය",
+    "speech_notify": "කථනය දැනුම් දෙන්න",
+    "screen_always_on": "තිරය ​​සැමවිටම",
+    "speech_in_background": "පසුබිමේ කථාව",
+    "volume": "වෙළුම",
+    "press_wait": "නව GPS සඳහා ඔබා බලා සිටින්න",
+    "get_gps": "Get GPS",
+    "save_gps": "Save GPS",
+    "set_gps_city": "අන්තර්ජාලය මඟින් GPS නගරයේ නම සකසන්න",
+    "previous_gps_is": "පෙර GPS වේ",
+    "decimal_number": "දශම සංඛ්යාව",
+    "current_offset_is": "වත්මන් ඕෆ්සෙට් වේ",
+    "safety": "ආරක්ෂාව",
+    "none": "කිසිවක් නැත",
+    "minute1": "1 minute",
+    "minutes2": "2 minutes",
+    "minutes3": "3 minutes",
+    "minutes4": "4 minutes",
+    "minutes5": "5 minutes",
+    "minutes10": "10 minutes",
+    "na_uyana": "නා-උයන",
+    "pa_auk": "පා-අවුක්",
+    "search_for_city": "නගරය සොයන්න"
 }
