Sinhala Localisation text changes

--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -6,7 +6,7 @@
     "gps": "GPS",
     "settings": "සැකසුම්",
     "help": "උදව්",
-    "about": "පිළිබඳව",
+    "about": "පිළිබඳ",
     "licenses": "බලපත්‍ර",
     "not_set": "සකසා නැත",
     "solar_noon": "දහවල් හිරු",
@@ -18,19 +18,19 @@
     "sunrise": "හිරු උදාව",
     "date": "දිනය",
     "current_time": "දැන් වේලාව",
-    "late": "නැසීගිය",
+    "late": "ප්‍රමාදයි",
     "time_left": "ඉතිරි කාලය",
     "speech_notify": "කථනය දැනුම් දෙන්න",
-    "screen_always_on": "තිරය ​​සැමවිටම",
+    "screen_always_on": "තිරය සැමවිටම",
     "speech_in_background": "පසුබිමේ කථාව",
-    "volume": "වෙළුම",
+    "volume": "ශබ්දය",
     "press_wait": "නව GPS සඳහා ඔබා බලා සිටින්න",
     "get_gps": "Get GPS",
     "save_gps": "Save GPS",
-    "set_gps_city": "අන්තර්ජාලය මඟින් GPS නගරයේ නම සකසන්න",
-    "previous_gps_is": "පෙර GPS වේ",
+    "set_gps_city": "අන්තර්ජාලය ඔස්සේ නගරයේ නම GPS මඟින් සකසන්න",
+    "previous_gps_is": "පෙර GPS ඛණ්ඩාංකය",
     "decimal_number": "දශම සංඛ්යාව",
-    "current_offset_is": "වත්මන් ඕෆ්සෙට් වේ",
+    "current_offset_is": "වත්මන් ඕෆ්සෙට් එක",
     "safety": "ආරක්ෂාව",
     "none": "කිසිවක් නැත",
     "minute1": "1 minute",
