fix Myanmar Translation

--- a/lib/l10n/app_my.arb
+++ b/lib/l10n/app_my.arb
@@ -1,70 +1,70 @@
 {
-    "buddhistSun": "ဗုဒ္ဓနေ!",
-   "noon":     "နေ့လည်၊မွန်းတည့်",
-   "dawn":      "အရုဏ်တက်",
+   "buddhistSun": "ဗုဒ္ဓနေ!",
+   "noon":     "မွန်းတည့်",
+   "dawn":      "အရုဏ်",
    "timer": "အချိန်မှတ်ကိရိယာ",
    "gps":       "ဂျီပီအက်စ်",
-   "settings": "နောက်ခံ၊ဆက်တင်",
+   "settings": "ဆက်တင်",
    "help":   "အကူအညီ",
-   "about": "အကြောင်း၊ခန့်",
+   "about": "အကြောင်းအ⁠ရာ",
    "licenses": "လိုင်စင်",
    "not_set":  "မသတ်မှတ်ထား",
    "solar_noon": "နေမွန်းတည့်",
    "gmt_offset": "GMTအချိန်ကွာခြားချက်",
    "hours":  "နာရီ",
-   "astronomical_twilight": "နက္ခတဗေဒဆည်းဆာ",
-   "nautical_twilight": "ရေကြောင်းဆည်းဆာ",
-   "civil_twilight": "မြို့ပြဆည်းဆာ",
+   "astronomical_twilight": "နက္ခတ္တ​​ဗေဒအရုဏ်",
+   "nautical_twilight": "ရေကြောင်းအရုဏ်",
+   "civil_twilight": "မြို့ပြအရုဏ်",
    "sunrise": "နေထွက်ချိန်",
    "date": "ရက်စွဲ",
    "current_time": "လက်ရှိအချိန်",
    "late": "နောက်ဆုံး",
    "time_left": "ကျန်ရှိသောအချိန်",
-   "speech_notify": "မိန့်ခွန်းအစီရင်ခံသည်",
-   "screen_always_on": "မျက်နှာပြင်အမြဲဖွင့်သည်",
-   "speech_in_background": "နောက်ခံစကားပြော",
-   "volume": "ထုထည်၊ပမာဏ",
+   "speech_notify": "အသံဖြင့်အချက်ပေး",
+   "screen_always_on": "မျက်နှာပြင်အမြဲဖွင့်",
+   "speech_in_background": "နောက်ကွယ်အသံအချက်ပေး",
+   "volume": "အသံတိုးကျယ်",
    "press_wait": "နှိပ်ပြီးစောင့်သည်",
-   "get_gps": "GPS ရသည်",
-   "save_gps": "GPS သိမ်းသည်",
-   "set_gps_city": "GPSမြိုတွင်ထားသည်",
-   "previous_gps_is": "ယခင်GPSဖြစ်သည်",
+   "get_gps": "ဂျီပီအက်စ် ရယူရန်",
+   "save_gps": "ဂျီပီအက်စ် သိမ်းဆည်းရန်",
+   "set_gps_city": "အင်တာနက်မှတဆင့် ဂျီပီအက်စ်တည်နေရာရှိ မြို့ကို ရွေးချယ်ရန်",
+   "previous_gps_is": "ယခင်ဂျီပီအက်စ်မှာ",
    "decimal_number": "ဒသမကိန်း",
-   "current_offset_is": "လက်ရှကွာခြားချက်",
+   "current_offset_is": "လက်ရှိကွာခြားချက်",
    "safety": "လုံခြုံမှု",
-   "none": "ဘာမျှ၊ဘယ်ဟာမျှ",
+   "none": "ဘာမှမထား",
    "1minute":   "တစ်မိနစ်",
    "2minutes": "နှစ်မိနစ်",
    "3minutes": "သုံးမိနစ်",
    "4minutes": "လေးမိနစ်",
    "5minutes": "ငါးမိနစ်",
    "10minutes": "ဆယ်မိနစ်",
-   "na_uyana": "နဦးရနာ",
+   "na_uyana": "နာဂဥယျာန",
    "pa_auk": "ဖားအောက်",
    "search_for_city": "မြို့ရှာရန်",
-    "gps_permission":               "GPS ခွင့်ပြုချက်",
-    "background_permission":        "နောက်ခံခွင့်ပြုချက်",
+    "gps_permission":               "ဂျီပီအက်စ် ခွင့်ပြုချက်",
+    "background_permission":        "နောက်ကွယ် ခွင့်ပြုချက်",
     "error":                        "အမှား",
-    " notification":                "အကြောင်းကြားချက်",       
-    "running_in_background":        "နောက်ခံတွင်အလုပ်လုပ်နေမည်",
-    "background_initialized":       "နောက်ခံအစပြုသည်",     
-    "background_enabled":           "နောက်ခံကိုဖွင့်ပါ",   
-    "background_not_set":           "နောက်ခံကိုသတ်မှတ်မထားပါ",     
-    "background_init_error":        "နောက်ခံအစပြုအမှား",   
-    "background_disabled":          "နောက်ခံပိတ်ထားပါ",    
+    "notification":                "အသိပေးချက်",       
+    "running_in_background":        "နောက်ကွယ်တွင် အလုပ်လုပ်နေမည်",
+    "background_initialized":       "နောက်ကွယ်လုပ်ဆောင်ချက် စတင်ပြီးပြီ",     
+    "background_enabled":           "နောက်ကွယ်လုပ်ဆောင်ချက် ဖွင့်ရန်",   
+    "background_not_set":           "နောက်ကွယ်လုပ်ဆောင်ချက် မသတ်မှတ်ထား",     
+    "background_init_error":        "နောက်ကွယ်လုပ်ဆောင်ချက် စတင်မှု အမှားတွေ့",   
+    "background_disabled":          "နောက်ကွယ်လုပ်ဆောင်ချက် ပိတ်ထားသည်",    
     "ok":                           "အိုကေ",     
-    "gps_not_available":            "GPS မရနိုင်ပါ",
+    "gps_not_available":            "ဂျီပီအက်စ် မရနိုင်ပါ",
     "yes": "ဟုတ်သည်",
     "no": "မဟုတ်ပါ",
     "cancel": "ပယ်ဖျက်သည်",
-    "gps_recommend": "အကောင်းဆုံးရလဒ်အတွက်GPS ကိုထောက်ခံသည်။ GPS သတ်မှတ်လိုပါသလား ",
-    "gps_internet_message": "အင်တာနက်ဖွင့်လျှင် GPS သည် မြို့နာမည်ကိုရည်ညွန်းပြနိုင်သည်",
+    "gps_recommend": "အမှန်ဆုံးရလာဒ်အတွက် ဂျီပီအက်စ်တည်နေရာ ကို သုံးစွဲရန် အကြံပြုပါသည်။ ဂျီပီအက်စ်ကို သုံးစွဲလိုပါသလား?",
+    "gps_internet_message": "အင်တာနက်ဖွင့်ထားလျှင် ဂျီပီအက်စ်ကနေ မြို့နာမည်ကို ဖော်ပြနိုင်သည်",
 
 
 
-    "help_content":    "calculations တွက်ချက်မှုများသည် နက္ခတဗေဒဆိုင်ရာအယ်လဂိုရီသမ်မှ ညီမျှခြင်းများပေါ်တွင်အခြေခံသည်ဟု Jean Mssus ကပြောသည်။နေဝင်ချိန်နှင့်နေထွက်ချိန်ရလဒ်များသည် +\\- 72 ဒီဂရီ လတ္တီကျုကြားရှိနေရာများတွင်တစ်မိနစ်အတွင်း သဘောတရားအရ တိကျသည်။ ဖော်ပြထားတဲ့အချိန်မရောက်ခင်ကျေးဇူးပြုပြီး စဉ်းစားပြီးရပ်လိုက်ပါ။ \n\n Noon \n GPS မှရွေးချယ်ထားသောလက်ရှိနေ့အတွက် Noon Screen မှ နေမွန်းတည့်ကိုပြသသည်။ အချိန်တိုင်း Settingမှ လုံခြုံရေးထင်ဟပ်သည်။ (see below) \n\n Dawn \" Dawn Screen\" သည် Setting မှ ရွေးချယ်ထားသော အရုဏ်ဦးဖော်မြူလာနှင့်အမျိုးမျိုးသော နေရောင်ခြည်တွက်ချက်မှုကိုပြသည်။ အချိန်တိုင်းSetting မှလုံခြုံမှုကိုထင်ဟပ်သည်။ \n Pa-Auk (Sunrise-40 minutes) \n Na-uyana (Sunrise -30minutes) (see below) \n\n GPS \n GPS အင်တာနက်ဖွင့်ထားပြီး အမှန်ခြစ်စစ်ဆေးထားလျှင် GPS ကမြို့ကိုအလိုအလျောက် ချိန်ပေးလိမ့်မည်။ GPS setting ကို သင့်ရဲ့နေရာအတွက်သုံးဖို့အကြံပေးချင်ပါတယ်။ Solar Noon က ဒီနည်းနှင့် အတိကျဆုံးဖြစ်ပါလိမ့်မည်။ နေရာများနဲ့တော့ ဒီအရာကို မစမ်းသပ်ရသေးပါ။\n Day Light Savings \n\n Settings \n Offset GPS ကိုအလိုအလျောက်ချိန်ပြီးဖြစ်သည်။ Setting မှာ သင် City Search ကိုသုံးလျှင် သင်အချိန်ကွာခြားချက်ကိုရွေးရမည်။ \n Safety \n မွန်းတည့်ချိန်မှ မိနစ်များနှတ်လျှင်စောသွားပြီး နံနက်ချိန်တွင်ပေါင်းလျင် နောက်ကျလိမ့်မည်။ဖော်ြမူလာသည်တစ်မိနစ်အတွင်းတိကျသည်။ထို့ကြောင့်ပုံမှန်လုံခြုံရေးသည်တစ်မိနစ်ဖြစ်သည်။\nDawn\n  သင်ကြိုက်နှစ်သက်သောအရုဏ်တက်ချိန်ကိုရွေးချယ်ပါ။နဦးရနာ ကနေထွက်ချိန် -30မိနစ်ကိုအသုံးပြုပြီး ဖားအောက်သည် နေထွက်ချိန်-40မိနစ်ကိုသုံးသည်။ လုံခြုံမှုအချိန်ထဲကို xမိနစ်ပေါင်းထည့်လိမ့်မည်။ \nTimer\n  အချိန်မှတ်ကိရိယာက အသံဖြင့်အကြောင်းကြားစာများကိုခွင့်ပြုသည်။ စကားအဓိပ္ပာယ်သည် \"Text To Speech\"  ရုပ်သံစလိုဒ်ကို အသံခလုပ်နှင့် ထိန်းချူပ်သည်။ ပုံမှန်အခြေအနေတွင် Screen ဖွင့်ထားမှ စကားအကြောင်းကြားချက်ကအလုပ်လုပ်သည်။ ဤအရာကိုပြုပြင်ရန် သင်က \"Screen always on\" ခလုပ်ကိုဖွင့်ထားပေးရမည်။ သို့မဟုတ်သင်က \"TTS with Screen off\" စနစ်ကိုစတင်လုပ်ဆောင်နိုင်သည်။ သင်Screen ကိုပိတ်ပြီး စက်ကိရိယာကို Sleep mode ဝင်တာကိုတားဆီးပြီးဤအရာက\"Background\" လုပ်ငန်းစတင်လုပ်ဆောင်လိမ့်မည်။ ၎င်းကိုအမှီမပြုခင် သင်နောက်ခံစနစ်ကို အချိန်အနည်းငယ်စမ်းသပ်သင့်သည်။ အချို့ဖုန်းများတွင်၎င်းကိုခွင့်ပြုမထားပါ။ ကျွန်ုပ်တို့ အကုန်လုံးအတွက်တာဝန်မယူနိုင်ပါ။ သင်အက်ပလီကေးရှင်း ကိုပိတ်လိုက်သည့်အခါ နောက်ခံတာဝန်ကိုရပ်ရန်နည်းလမ်းတစ်ခုပေါ်လာသည်။ သင့်ရဲ့ဖုန်းအကြာင်းကြားစာ နေရာ ထိပ်မှာနေပုံစံ ကို ပြသနေလျှင်သင် နောက်ခံမှာ အက်ပလီကေးရှင်း အလုပ်လုပ်နေတာသိလိမ့်မည်။ ဗုဒ္ဓနေသည် \"Background area\" မဟုတ်လျှင် သင်နေပုံစံကို မြင်ရမည်မဟုတ်ပါ။IOS အသုံးပြုသူများအတွက် ဤစနစ်မရရှိသေးပါ။ \n စကားကြော်ညာချက်သည်အထက်ပါကြားကာလတွင်ဖြစ်သည် 50,40,30,20,15,10,8,6,5,4,3,2, 1,0 \n\n Privacy \n သီးသန့်ပြောဆိုချက်အပြည့်အစုံဒီမှာရှိပါသည်။ https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n ကျွန်ပ်တို့သတင်းအချက်အလက်များမစုဆောင်းပါ။   ",
-    "about_content":                    "ပါရှိသည့်အကြောင်းအရာများ ဗုဒ္ဓနေသည် ဗုဒ္ဓဘာသာ ဘုန်းကြီးများ၊သီလရှင်များအတွက်ဗုဒ္ဓဘာသာနှင့်ဆိုင်သောလိုအပ်ချက်များနေမွန်းတည့်ချိန်တိတိကျကျကိုပြသော အက်ပလီကေးရှင်းတစ်ခုဖြစ်သည်။ အဘယ်ကြောင့်ဆိုသော် ကျွနု်ပ်သည် လက်နှင့်အမြဲစားသောက်သည်။ မွန်းတည့်ချိန်နီးလာလျှင် သိရန် လက်လွတ် သိဖို့လိုသည်။ အသံအကြောင်းကြားစာပါသော အချိန်မှတ်စက်သည်ကျွနု်ပ်ကိုအစားစာရန်အချိန်ဘယ်လောက်ကျန်လဲသိရန်အထောက်အကူပြုသည်။ကျွန်ုပ်ဤအက်ပလီကေးရှင်းအသုံးပြုရတာ အဆင် ပြေသည်။သင်တို့လည်းအဆင်ပြေရန်မျှော်လင့်သည်။\n\n ဒီဟာဘာကြောင့်အရေးကြီးတာလဲ \n ဗုဒ္ဓဘာသာဘုန်းတော်ကြီးစည်းကမ်းများကိုလိုက်နာသူများသည် မွန်းတည့်နောက်ပိုင်းအစားစားရန်ခွင့်မပြုထားပါ။ စည်းကမ်းသည်နာရီထက်စာလျှင် ကောင်းကင်တွင်နေထိပ်တည့်တည့်ရောက်ချိန်တွင်သတ်မှတ်ထားသည်။ ဗုဒ္ဓရှိစဉ်ကနာရီမရှိခဲ့ပါ။ ပညက်ချက် 8ချက် (သို့) 10ချက်လိုက်နာသူများသည် အက်ပလီကေးရှင်းအသုံးဝင်သည်။ ဤအက်ပလီကေးရှင်းမှန်ကန်ကြောင်းအတည်ပြုရန် https://TimeandDate.com ကိုအကြံပြုပါသည်။ ဤအက်ပလီကေးရှင်းသည် \" present moment,locations\" တွင်အသုံးပြုနိုင်သည်။ ဤအရာက သင့်ကို နိဗ္ဗာန် ကိုလျင်လျင်မြန်မြန်ရောက်ရန် အကူအညီဖြစ်ပါစေ။ \"",
-    "gps_permission_content":           " GPS အသုံးပြုရန်အတွက်ခွင့်ပြုချက်တောင်းရလိမ့်မည်။ နေအနေအထားတွက်ချက်ရန် GPS ဒေတာသိရန် ဗုဒ္ဓနေကို၎င်းကခွင့်ပြုသည်။ GPS ခလုပ်ကိုနှိပ်သည့်အခါတိုင်း GPS သည်တစ်ကြိမ်သာစုဆောင်းသည်။ အချက်အလက်များကို အက်ပလီကေးရှင်းအပြင်သို့မပို့ပါ။",
-    "background_permission_content":    "နောက်ခံ အသုံးပြုရန်အတွက်ခွင့်ပြုချက်တောင်းရလိမ့်မည်။စကားပြောScreen မှန်မှန်ကန်ကန်ဖွင့်ရန်ဤခွင့်ပြုချက်လိုသည်။ ခလုတ်ပိတ်လိုက်သည့်အခါ (သို့) အက်ပလီကေးရှင်းပိတ်လိုက်လျှင် ဗုဒ္ဓနေက နောက်ခံလုပ်ငန်းကိုပိတ်လိမ့်မည်။ လက်ခံလျှင်ခွင့်ပြုချက်တစ်ကြိမ်သာတောင်းလိမ့်မည်။"
+    "help_content":    "တွက်ချက်မှုများ\n   တွက်ချက်မှုများသည် Jean Mssus ၏ နက္ခတ္တဗေဒဆိုင်ရာ အယ်လဂိုရီသမ်များပေါ်တွင် အခြေခံထားသည်။ နေဝင်ချိန်နှင့် နေထွက်ချိန်ရလဒ်များသည် သီအိုရီအရ လတ္တီကျုကွာခြားချက် 72 ဒီဂရီ အတွင်းတွင် တစ်မိနစ်လောက်နီးနီး တိကျသည်။  သို့လင့်စကား နိုင်ငံ့စံတော်ချိန်လာ မွန်းတည့် ၁၂ နာရီမထိုးမီ (ဆွမ်းစားခြင်းကိစ္စ)ရပ်ဆိုင်းသင့်ကြောင်း ကျေးဇူးပြု၍ နှလုံးသွင်းထားပါ။ \n\nမွန်းတည့်ချိန်\n   မွန်းတည့်ချိန်ပြ မျက်နှာပြင်သည် ရွေးချယ်ထားသော ဂျီပီအက်စ်(သို့)မြို့အလိုက် နေမွန်းတည့်ချိန်ကို ဖော်ပြသည်။ ဆက်တင်အပြင်အဆင်၌ မွန်းတည့်ပြီးလားဟု သံသယမဖြစ်အောင် ထပ်ပေါင်းထည့်ထားသော အချိန်အားလျော်စွာ မွန်းတည့်ချိန်စသောအချိန်တို့ကို ဖော်ပြပါသည်။   (အောက်တွင် ထပ်မံ ကြည့်ရှုပါ) \n\nအရုဏ်တက်ချိန်\n    အရုဏ်တက်ချိန်ပြ မျက်နှာပြင်သည် ဆက်တင်၌ ရွေးချယ်ထားသော အရုဏ်တက်တွက်ချက်မှုဆိုင်ရာ ဖော်မြူလာအားလျော်စွာ အရုဏ်တက်ချိန်ကို ဖော်ပြပါသည်။ အမျိုးမျိုးသော အရုဏ်ချိန်များကိုလည်း ဖော်ပြပါသည်။ မွန်းတည့်ပြီးလားဟု သံသယမဖြစ်အောင် ထပ်ပေါင်းထည့်ထားသော  ဆက်တင်သတ်မှတ်ချက် အချိန်အားလျော်စွာ အရုဏ်တက်ချိန် စသည်တို့ကို ဖော်ပြပါသည်။ \n ဖားအောက် = (နေထွက်ချိန်မှ မိနစ် ၄၀ နှုတ်) \n နာဂဥယျာန = (နေထွက်ချိန်မှ မိနစ် ၃၀ နှုတ်) (အောက်တွင် ထပ်မံ ကြည့်ရှုပါ)\n\n ဂျီပီအက်စ် \n ဂျီပီအက်စ် အင်တာနက်ဖွင့်ထားပြီး အမှန်ခြစ်စစ်ဆေးထားလျှင် ဂျီပီအက်စ် တည်ရာမြို့ကို အလိုအလျောက် ရွေးချယ်ပါလိမ့်မည်။ ဂျီပီအက်စ် ဆက်တင်သတ်မှတ်ချက်ကို သင့်ရဲ့နေရာအတည်ပြုဖို့အတွက်  သုံးစွဲရန် အကြံပြုပါတယ်။ ဒီနည်းနှင့်ဆိို နေမွန်းတည့်ချိန်  အတိကျဆုံး ဖြစ်ပါလိမ့်မည်။ မြို့နာမည်များဖြင့် တိတိကျကျ ဖြစ်/မဖြစ် မစမ်းသပ်ရသေးပါ။\n Day Light Savings \n\n Settings \n Offset GPS ကိုအလိုအလျောက်ချိန်ပြီးဖြစ်သည်။ Setting မှာ သင် City Search ကိုသုံးလျှင် သင်အချိန်ကွာခြားချက်ကိုရွေးရမည်။ \n သံသယကင်းရှင်းရေး \n မွန်းတည့်ချိန်မှ မိနစ်များနှတ်လျှင်စောသွားပြီး နံနက်ချိန်တွင်ပေါင်းလျင် နောက်ကျလိမ့်မည်။ ဖော်ြမူလာသည်တစ်မိနစ်အတွင်းတိကျသည်။ ထို့ကြောင့်ပုံမှန်လုံခြုံရေးသည် တစ်မိနစ်ဖြစ်သည်။ \n\nအရုဏ်\n   သင်ကြိုက်နှစ်သက်သော အရုဏ်တက်ချိန်ကိုရွေးချယ်ပါ။ နာဂဥယျာနတောရကျောင်း(သီရိလ​င်္ကာ)က နေထွက်ချိန်မှ မိနစ် ၃၀ နှုတ်၍ အရုဏ်တက်ချိန်အဖြစ် သတ်မှတ်သည်။ ဖားအောက်တောရကား နေထွက်ချိန်မှ မိနစ် ၄၀ နှုတ်၍ အရုဏ်တက်ချိန်အဖြစ် သတ်မှတ်သည်။ သံသကင်းအောင် ပိုထည့်ထားသော မိနစ်(များ)ကို အရုဏ်တက်ချိန်ထဲ ပေါင်းထည့်၍ ပြသပေးပါမည်။ \n\nအချိန်မှတ်ကိရိယာ\n  အချိန်မှတ်တမ်းပြ မျက်နှာပြင်က အသံဖြင့် မွန်းတည့်ရန် ကျန်ရှိနေသေးသော အချိန်ကို အသံဖြင့် အသိပေးပါလိမ့်မည်။ အချက်ပေးသံ အတိုးအကျယ်ကို ဘားကို ပွတ်ဆွဲ၍ အတိုးအလျှော့ ပြုနိုင်ပါသည်။ ဖုန်းမျက်နှာပြင် ပေါ်နေသည့်အချိန်မှသာ  အသံဖြင့် အချက်ပေးမှု ပုံမှန် အလုပ်လုပ်သည်။ (မျက်နှာပြင် ပိတ်ထားက အလုပ်မလုပ်ပါ) အသံဖြင့် အချက်ပေးမှု အဆင်ပြေပြေ လုပ်ဆောင်နိုင်ရန်အတွက်  \"ဖုန်းမျက်နှာပြင်အမြဲဖွင့်\" ခလုပ်ကို ဖွင့်ထားပါ။ သို့မဟုတ် \"နောက်ကွယ်အသံအချက်ပေး\" ခလုပ်ကို ဖွင့်ထားပါ။ \"နောက်ကွယ်အသံအချက်ပေး\"စနစ်သည် ဖုန်းမျက်နှာပြင်ပိတ်ထားသော်လည်း အသံဖြင့် အသံချက်ပေးနိုင်ပါသည်။ ၎င်းစနစ်ကို လေးငါးကြိမ်ခန့် စမ်းသပ်အသုံးပြုကြည့်ပြီးမှသာ နေ့စဉ်သုံးအဖြစ် သုံးသင့်ပါသည်။ အချို့ဖုန်းများတွင် ၎င်းစနစ်ကို ခွင့်ပြုမထားပါ။ ကျွန်ုပ်တို့ အကုန်လုံးအတွက် တာဝန်မယူနိုင်ပါ။ သင် အက်ပလီကေးရှင်းကို ပိတ်လိုက်သည့်အခါ နောက်ကွယ်အသံအချက်ပေးစနစ် ပိတ်သွားအောင် စီမံထားပါသည်။ နောက်ကွယ်စနစ် အလုပ် လုပ်နေ/မလုပ်နေသည်ကို သင့်ဖုန်း၏ အသိပေးမှုပြ နေရာ၌ ယခု⁠အပ်ပလီကေးရှင်း၏ ပုံ ပေါ်နေ/မပေါ်နေ ကြည့်၍ သိနိုင်ပါသည်။ နောက်ကွယ်စနစ် အလုပ်မလုပ်နေပါက အဆိုပါပုံ ပေါ်နေလိမ့်မည် မဟုတ်ပါ။ IOS အသုံးပြုသူများအတွက် ဤစနစ် မရနိုင်သေးပါ။ \n မိနစ် 50,40,30,20,15,10,8,6,5,4,3,2, 1,0 တို့အကြားတွင် အသံဖြင့် အသံဖြင့် အချက်ပေးပါသည်။ \n\n ကိုယ်ရေးလုံခြုံမှု \n   ကိုယ်ရေးလုံခြုံမှုဆိုင်ရာ အချက်အလက်များအားလုံကို အောက်တွင် ပေးထားသော လင့်တွင် ကြည့်ရှုနိုင်ပါသည်။\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n ကျွန်ပ်တို့ သင်၏ သတင်းအချက်အလက်များကို စုဆောင်းခြင်း မလုပ်ပါ။   ",
+    "about_content":                    "အကြောင်းအရာများ\n     ဗုဒ္ဓနေဆော့ဝဲလ်(အက်ပလီကေးရှင်း)သည်  ဗုဒ္ဓဘာသာ ဘုန်းတော်ကြီး၊ သီလရှင်များအတွက် ဝိနည်းဆိုင်ရာ နေမွန်းတည့်ချိန်ကို တိတိကျကျ ဖော်ပြသော အက်ပလီကေးရှင်းတစ်ခုဖြစ်သည်။ ယခုအပ်ပလီကေးရှင်း ရေးသားသူသည်  ဆွမ်းကို လက်ဖြင့် အမြဲဘုဉ်းပေးလေ့ရှိသော ဘုန်းတော်ကြီးတပါးဖြစ်သည့် အားလျှော်စွာ မွန်းတည့်ချိန်ရောက်ဖို့ အချိန်မည်မျှ ကျန်သေးသည်ကို ဖုန်းကိုလက်ဖြင့် ထိစရာမလိုဘဲ သိဖို့ လိုအပ်ပါသည်။ အသံဖြင့် အချက်ပေးသော အချိန်မှတ်စက်သည် ဆွမ်းဘုဉ်းရန် အချိန်မည်မျှ ကျန်နေသေးသည်ကို သိရှိရန် အထောက်အကူ ပြုပါသည်။ ယခု အပ်ပလီကေးရှင်း မိမိအတွက် အသုံးပြုရတာ အဆင်ပြေသလို မိတ်ဆွေတို့အတွက်လည်း အသုံးတည့်လိမ့်မည်ဟု မျှော်လင့်ပါသည်။ \n\n မွန်းတည့်ချိန်အရေးကြီးခြင်းအကြောင်း \n     ဗုဒ္ဓဘာသာရဟန်းတော်များအတွက် မွန်းတည့်နောက်ပိုင်း အစားမစားရန် တားမြစ်ထားသော ဝိနည်းစည်းကမ်းရှိပါသည်။ ထိုစည်းကမ်းလာ မွန်းတည့်ချိန်သည် နာရီအပေါ်တွင် အခြေမခံဘဲ နေပေါ်တွင် အခြေခံထားသည်။ ဘုရားရှင်ပွင့်ရာ အခါတုန်းက နာရီမရှိသေးပါ။ ၈-ပါးသီလ၊ ၁၀-ပါးသီလ စောင့်ထိန်းသူ လူပုဂ္ဂိုလ်မျးအတွက်လည်း ဤအက်ပလီကေးရှင်းသည် အသုံးဝင်ပါလိမ့်မည်ဟု မျှော်လင့်ပါသည်။ ဤအက်ပလီကေးရှင်းမှ တွက်ချက်ဖော်ပြချက်များ မှန်ကန်ကြောင်း စစ်ဆေးအတည်ပြုဖို့အတွက် https://TimeandDate.com ဟူသော ဝက်ဆိုဒ်၌ ကြည့်ရှုရန် အကြံပြုပါသည်။ ဤအက်ပလီကေးရှင်းသည် ရောက်ဆဲနေရာ၌ ရောက်ဆဲအချိန်ကို သိရှိနိုင်ရန်အတွက် ရည်ရွယ်ပါသည်။\n\nယခုအပ်ပလီကေးရှင်းသည် သင့်အတွက် နိဗ္ဗာန်သို့ မပင်မပန်း လျှင်စွာရောက်စေကြောင်း အထောက်အပံ့ ဖြစ်ပါစေသော်။",
+    "gps_permission_content":           "ဂျီပီအက်စ် အသုံးပြုရန်အတွက် ခွင့်ပြုချက် တောင်းလိမ့်မည်။ ဂျီပီအက်တည်နေရာပေါ် မူတည်ပြီး နေမွန်းတည့် အနေအထား တွက်ချက်ရန်အတွက် အထက်ပါ ခွင့်ပြုချက် လိုအပ်ပါသည်။ ဂျီပီအက်စ် ခလုပ်ကို နှိပ်သည့်အခါခဏ၌သာ ဂျီပီအက်အချက်အလက်ကို တကြိမ်မျှ ရယူပါသည်။ အချက်အလက်များကို ဤအက်ပလီကေးရှင်းမှလွဲ၍ တခြားနေရာများသို့ မပို့ပါ။",
+    "background_permission_content":    "နောက်ကွယ်မှနေ၍ ⁠လုပ်ဆောင်မှုများ အတွက် ခွင့်ပြုချက် တောင်းပါလိမ့်မည်။  အသံဖြင့် အသိပေးချက် အလုပ်လုပ်နိုင်ဘို့အတွက် အထက်ပါ ခွင့်ပြုချက် လိုအပ်ပါသည်။ ခွင့်ပြုချက်ခလုပ်ကို ပိတ်သောအခါ (သို့မဟုတ်) အပ်ပလီကေးရှင်းကို ပိတ်သောအခါ၌ နောက်ကွယ်⁠လုပ်ဆောင်နိုင်စွမ်းခွင့်ပြုချက် ပိတ်ပါလိမ့်မည်။ အထက်ပါ ခွင့်ပြုချက်ကို တကြိမ်သာ တောင်းပါလိမ့်မည်။"
 
 }
