--- a/lib/l10n/app_my.arb
+++ b/lib/l10n/app_my.arb
@@ -54,6 +54,7 @@
     "background_disabled":          "နောက်ကွယ်လုပ်ဆောင်ချက် ပိတ်ထားသည်",    
     "ok":                           "အိုကေ",     
     "gps_not_available":            "ဂျီပီအက်စ် မရနိုင်ပါ",
+    "language":                     "စကား",
     "yes": "ဟုတ်သည်",
     "no": "မဟုတ်ပါ",
     "cancel": "ပယ်ဖျက်သည်",
