--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -41,5 +41,6 @@
     "minutes10": "10 minutes",
     "na_uyana": "නා-උයන",
     "pa_auk": "පා-අවුක්",
-    "search_for_city": "නගරය සොයන්න"
+    "search_for_city": "නගරය සොයන්න",
+    "language": "භාෂාව"
 }
