minor language fixes and some localization was added before, not used.

--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -42,5 +42,8 @@
     "na_uyana": "නා-උයන",
     "pa_auk": "පා-අවුක්",
     "search_for_city": "නගරය සොයන්න",
-    "language": "භාෂාව"
+    "language": "භාෂාව",
+    "theme": "වර්ණ"
+    
+
 }
