--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -67,7 +67,7 @@
     "@sunrise": {
       "description": "Sunrise"
     },
-    "date": "Date",
+    "date": "日期",
     "@date": {
       "description": "日期"
     },
@@ -239,11 +239,14 @@
     "@gps_internet_message": {
       "description": "gps to request internet."
     },
-    "language": "语",
+    "language": "语言",
     "@language": {
       "description": "language type."
     },
-
+    "theme": "主题",
+    "@theme": {
+      "description": "For selecting the colors."
+    },
     "help_content": "算法:\n 计算依照让-米尔斯的天文算法公式进行。在南北纬72°间日出和日落的算值精度理论上偏差小于1分钟。请依预设时间恰当止息。 \n\n正午:\n正午屏面以简便方式显示GPS地址或所在城市的当日太阳日中时间。所有时间值参考了设定的安全时差。（见下）\n\n明相:\n明相屏面显示根据设定和相关太阳算法而产生的明相时间。 所有时间值计入设定的安全时差。 \n帕奥 = (日出时间-40分钟)。 \n龙树林 = (日出时间-30分钟)。 (见下) \n\nGPS:\n有网络且选择框打勾时，GPS会自动设定所在城市。 推荐使用GPS进行位置设定，这是计算正午时刻精度最佳的方式。此测试不包括 \"夏令时\" 区。\n\n设定:\n偏移:\n 此功能在 GPS状态下自动设置。 如果你选择在设定时使用城市搜索，你需要输入标准时差值 (GMT +- 本地时间). \n安全时差:\n 正午时间减去此值令其略早，明相时间加上此值令其略晚。 本算法中精度差小于1分钟，所以缺省安全时差设定为1分钟。\n明相:\n可选择适合您的明相时间。  龙树林以日出前30分钟为明相时分，而帕奥则以日出前40分钟为明相。安全时差会加在您选择的明相设定时间。 \n计时器:\n计时器屏面提供免操作语音提示。语音表示 \"文本转语音\"。 音量可以滑动调节。 通常情况下，屏面显示状态下语音提示可用。 若需, 您可以选择 \"屏幕常亮\" 以避免关屏或启动 \"关屏时使用TTS\" 功能。关屏时进入 \"后台\"运行，防止设备进入睡眠模式。 在确保其效果前，建议您多测试后台功能几次。有些手机可能不允许这类操作。我们不作任何保证。 关闭本应用，需要操作以停止后台运行任务。若你在手机顶部信息提示区（时间和信号等）看到本应用的太阳图标，则表示该应用正在后台运行中。否则，您将不会在此处见到该图标。该功能苹果系统用户尚未提供。\n 语音播报间隔为: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\n隐私:\n详细的隐私声明请见:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n 我们不搜集任何信息，我们也不建立网络连接。在关闭状态下，本应用不在后台运行。GPS功能只有在您按下GPS按钮才因此而有唯一的一次启用。虽然本应用基于来自pub.dev网站的其它程序包，但我可以肯定，您在使用时是安全的。上述程序包在本应用“许可”页面，以及GitHub程序库中，有详细列明。",
     "@help_content": {
       "description": "instructions to use app."
